--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.loader {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: url("./Img/loading.gif") 50% 50% no-repeat #f9f9f9;
+  z-index: 999;
+}
+.Content {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.Container {
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.Container p {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+.Container h1 {
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  font-weight: bolder;
+}
+.ans {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.modes {
+  position: absolute !important;
+  top: 2vh;
+  right: 2vh;
+  width: 50px !important;
+  height: 50px !important;
+}
+.radio {
+  width: 100% !important;
+  display: flex !important;
+  justify-content: space-around;
+  flex-direction: row !important;
+}
+@media screen and (max-width: 540px) {
+  .Container {
+    width: 95vw;
+  }
 }
